--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.2.1",
     "json-loader": "0.5.4",
+    "node-sass": "^4.5.3",
     "react": "15.5.4",
     "react-dom": "15.5.4",
     "react-hot-loader": "3.0.0-beta.7",
     "react-router-dom": "4.1.1",
+    "sass-loader": "^6.0.5",
     "style-loader": "0.17.0",
     "typescript": "2.3.2",
     "url-loader": "0.5.8",
