--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "aspnet-webpack": "^1.0.29",
     "aspnet-webpack-react": "^2.0.0",
     "awesome-typescript-loader": "3.1.3",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "3.3.7",
     "css-loader": "0.28.1",
     "event-source-polyfill": "0.0.9",
@@ -27,7 +33,10 @@
     "style-loader": "0.17.0",
     "typescript": "2.3.2",
     "url-loader": "0.5.8",
-    "webpack": "2.5.1",
+    "webpack": "^2.6.1",
     "webpack-hot-middleware": "2.18.0"
+  },
+  "dependencies": {
+    "babel-preset-react-hmre": "^1.1.1"
   }
 }
